**  denotes quite substantial/important changes
*** denotes really big changes 

Currently deprecated and liable to be removed: 
- single penalty tensor product smooths.
- p.type!=0 in summary.gam.

1.8-16

* Correction of scaling error in sherical correlation structure GP smooth.

1.8-15

* Fix of survival function prediction in cox.ph family. Code used expression 
  (8.8.5) in Klein and Moeschberger (2003), which is missing a term. Correct
  expression is, e.g., (10) from Andersen, Weis Bentzon and Klein (1996)
  Scandinavian Journal of Statistics.  

* Added help file 'cox.pht' for Cox PH regression with time dependent 
  covariates. 

* fix of potential seg fault in gdi.c:get_bSb if single smooth model 
  rank deficient (insufficient workspace allocated).

* gam.fit5 modified to step half if trial penalized likelihood is infinite.

* Fix so that bam works properly with drop.intercept=TRUE.

1.8-14

* bug fix to smoothCon that could generate NAs in model matrix when using bam
  with numeric by variables. The problem was introduced as part of the 
  bam(...,discrete=TRUE) coding. 

1.8-13

* Added help file ?one.se.rule on the `one standard error rule' for obtaining 
  smoother models.

* bam(...,discrete=TRUE) no longer complains about more coefficients than data.

* 's', 'te', 'ti' and 't2' modified to allow user to specify that the smooth
  should pass through zero at a specified point. See ?identifiability.

* anova.gam modified to use more appropriate reference degrees of freedom 
  for multiple model call, where possible. Also fixed to allow multiple 
  formulae models and to use -2*logLik in place of `deviance' for 
  general.family models.

* offsets allowed with multinomial, ziplss and gaulss families.

* gevlss family implementing generalized extreme value location, scale and 
  shape models. 

* Faster code used in 'uniquecombs'. Speeds up discretization step in 
  'bam(...,discrete=TRUE)'. Could still be improved for multi-column case.
